# hermes-jester

./: .gitignore  README.md  pyproject.toml
deploy/: README.md  env.example  jester.service
docs/: DESIGN.md  SERVICE_OVERVIEW.md
docs/design/: Hermes-Jester.dc.html
jester/: __init__.py  admin.py  api.py  app.py  auth_api.py  auth_ui.py  clock.py  config.py  db.py  deps.py  discovery.py  errors.py  examples.py  items_repo.py  keys_repo.py  models.py  types_repo.py  ui.py
jester/static/: app.css  app.js
jester/templates/: base.html  dashboard.html  item_detail.html  items.html  keys.html  login.html  type_edit.html  types.html
tests/: conftest.py  test_admin.py  test_api.py  test_discovery.py  test_examples.py  test_items_repo.py  test_keys_repo.py  test_types_repo.py  test_ui.py
