[project]
name = "hermes-jester"
version = "0.1.0"
description = "Authenticated inbox/queue service for hermes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jsonschema>=4.21",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
jester-admin = "jester.admin:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jester"]

[tool.pytest.ini_options]
testpaths = ["tests"]
